Diff: Fix rare layout issue with diff bar

--- a/github-dark.css
+++ b/github-dark.css
@@ -241,6 +241,10 @@
     position: static !important;
     margin-top: -20px !important;
   }
+  /* .. and fix rare layout issue related to above hack */
+  .diffbar.details-collapse {
+    width: 980px !important;
+  }
   /* HACK: Tweak issue reaction */
   .reaction-summary-item {
     line-height: 2rem !important;
